# ryser

./: .gitlab-ci.yml  .hgignore  .project  .pydevproject  CHANGES.txt  Kite-Form Partial Latin Squares.ipynb  MANIFEST.in  Makefile  NEWS.md  README.md  README.rst  README.txt  pyproject.toml  setup.py
.github/workflows/: python-package.yml
data/: eg2.txt  eg3.txt  eg4.txt  eg5.txt  eg6.txt  eg8.txt  examples.txt
demos/hall/bad/type1/: 12x12_type1_case1  8x8_type1_case2
demos/hall/bad/type2/: 12x12_type2_case2  8x8_type2_case1
doc/: conf.py  index.rst  intro.rst  modules.rst  tests.rst  tutorial.rst
investigations/: hiltons_claim.sh  is_hall_on_interval
public/: index.html
ryser/: __init__.py  completion.py  designs.py  examples.py  graphs.py  hall.py  input.py  output.py  utils.py
src/rysa/: designs.py
src/ryser/: __init__.py  designs.py  hall.py  output.py  utils.py
src/tests/: designs_tests.py  hall_tests.py  latin.py  output_tests.py  test_data.py
tests/: designs_tests.py  hall_tests.py  output_tests.py  test.py  test_latin.py  test_pls-list-colouring-problem.py  utils_tests.py
